[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'cc1d67e973fd02c0c997b164ba516cf041bf21f1'

[dependencies.kvdb-rocksdb1]
git = "https://github.com/yijie37/kvdb-rocksdb-com.git"
rev = '2355525093d46a99a435dc25bd24a24114946e11'

#[dependencies.parity-ethereum]
#path = './bridge/parity-ethereum/parity'
#
#[dependencies.ethcore]
#path = './bridge/parity-ethereum/ethcore'
#
#[dependencies.parity-rpc]
#path = './bridge/parity-ethereum/rpc'

[dependencies.qrml-tokens]
path = './qrml/tokens'
default-features = false

[dependencies.daqiao-runtime]
path = 'runtime'

[[bin]]
name = 'daqiao'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'daqiao'
version = '1.0.0'
