[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'daqiao-runtime-wasm'
version = '1.0.0'
[dependencies.daqiao-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['daqiao-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
