[package]
name = "parity-ethereum"
version = "0.1.0"
authors = ["yijie37 <yijiehere@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.11"
atty = "0.2.8"
rustc-hex = "1"
blooms-db = { path = "../util/blooms-db" } #version
#kvdb-rocksdb = { version = "0.1.3", optional = true }
kvdb-rocksdb1 = { git = "https://github.com/yijie37/kvdb-rocksdb-com.git", rev = '2355525093d46a99a435dc25bd24a24114946e11' }

clap = "2"
cli-signer= { path = "../cli-signer" }
client-traits = { path = "../ethcore/client-traits" }
common-types = { path = "../ethcore/types" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
dir = { path = "../util/dir" }
docopt = "1.0"
engine = { path = "../ethcore/engine" }
ethcore = { path = "../ethcore", features = ["parity"] }
ethcore-accounts = { path = "../accounts", optional = true }
ethcore-blockchain = { path = "../ethcore/blockchain" }
ethcore-call-contract = { path = "../ethcore/call-contract"}
ethcore-db = { path = "../ethcore/db" }
ethcore-io = { path = "../util/io" }
ethcore-light = { path = "../ethcore/light" }
ethcore-logger = { path = "../parity/src/logger" }

ethcore-network = { path = "../util/network" }
ethcore-private-tx = { path = "../ethcore/private-tx" }
ethcore-secretstore = { path = "../secret-store", optional = true }

ethcore-sync = { path = "../ethcore/sync" }
ethereum-types = "0.6.0"
ethkey = { path = "../accounts/ethkey" }
ethstore = { path = "../accounts/ethstore" }
fdlimit = "0.1"
futures = "0.1"
journaldb = { path = "../util/journaldb" }
jsonrpc-core = "12.0.0"
keccak-hash = "0.2.0"
kvdb = "0.1"
#kvdb-rocksdb = "0.1.3"
log = "0.4"
migration-rocksdb = { path = "../util/migration-rocksdb" }
num_cpus = "1.2"
number_prefix = "0.2"
panic_hook = { path = "../util/panic-hook" }
parity-bytes = "0.1"
parity-daemonize = "0.3"
parity-hash-fetch = { path = "../updater/hash-fetch" }
parity-ipfs-api = { path = "../ipfs" }

parity-path = "0.1"
parity-rpc = { path = "../rpc" }
parity-runtime = { path = "../util/runtime" }
parity-updater = { path = "../updater" }
parity-util-mem = { version = "0.2.0", features = ["jemalloc-global"] }
parity-version = { path = "../util/version" }
parking_lot = "0.8"
regex = "1.0"
registrar = { path = "../util/registrar" }
rlp = "0.4.0"
rpassword = "1.0"
#rustc-hex = "1.0"
semver = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
snapshot = { path = "../ethcore/snapshot" }
spec = { path = "../ethcore/spec" }
term_size = "0.3"
textwrap = "0.9"
toml = "0.4"
verification = { path = "../ethcore/verification" }

[lib]
path = "src/lib.rs"


