[package]
description = "Parity Ethereum (EthCore) Client & Network Service Creation & Registration with the I/O Subsystem"
name = "ethcore-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ansi_term = "0.11"
client-traits = { path = "../client-traits" }
common-types = { path = "../types" }
ethcore = { path = ".." }
ethcore-blockchain = { path = "../blockchain" }
ethcore-io = { path = "../../util/io" }
ethcore-private-tx = { path = "../private-tx" }
ethcore-sync = { path = "../sync" }
ethereum-types = "0.6.0"
kvdb = "0.1"
log = "0.4"
snapshot = { path = "../snapshot" }
spec = { path = "../spec" }
trace-time = "0.1"

[dev-dependencies]
ethcore = { path = "..", features = ["test-helpers"] }
ethcore-db = { path = "../db" }
#kvdb-rocksdb = "0.1.4"
#kvdb-rocksdb1 = { version = "0.1.5", git = "https://github.com/yijie37/kvdb-rocksdb-com.git" }
kvdb-rocksdb1 = { git = "https://github.com/yijie37/kvdb-rocksdb-com.git", rev = '2355525093d46a99a435dc25bd24a24114946e11' }
#kvdb-rocksdb = {git = 'https://github.com/paritytech/parity-common.git', rev = 'b0317f649ab2c665b7987b8475878fc4d2e1f81d'}
tempdir = "0.3"
